# nCompass

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
conda-envs/: internal-dev.yml  spike-gpt.yml
examples/: batched_not_streaming.py  fine_grained_control.py  gpt2_wikitext2_inference.py  hello_world.py  one_line_of_code.py  spikegpt_inference.py  spikegpt_train.py  test_data_and_loaders.py
ncompass/: __init__.py  api.py  async_utils.py  errors.py  network_utils.py
ncompass/cli/: __init__.py  help.py  start_session.py  stop_session.py
ncompass/client/: __init__.py  client.py
ncompass/client/functional/: __init__.py  client.py  model_health.py  run_prompt.py
ncompass/exec/inference/: __init__.py  inference.py
ncompass/internal/: __init__.py
ncompass/internal/config/: __init__.py
ncompass/internal/config/base/: __init__.py  base.py
ncompass/internal/config/exec/: __init__.py  exec.py
ncompass/internal/config/model/: __init__.py  model.py
ncompass/internal/exec/inference/: __init__.py  ann.py  common.py  inference.py  spikegpt.py
ncompass/internal/loaders/: __init__.py
ncompass/internal/loaders/train/: __init__.py  dataset.py
ncompass/internal/logging/: __init__.py  logging.py
ncompass/internal/models/: __init__.py  tokenizer.py
ncompass/internal/models/snn/: __init__.py
ncompass/internal/models/snn/spike_gpt/: __init__.py  tokenizer.py
ncompass/internal/utils/: __init__.py  immutable_class.py  models.py  sanity.py
ncompass/loaders/: __init__.py  huggingface.py
ncompass/loaders/train/: __init__.py  train.py
ncompass/models/: __init__.py  config.py  tokenizer.py  tokenizers.py  utils.py
ncompass/models/ann/: __init__.py  gpt2.py
ncompass/models/snn/: __init__.py  tokenizer.py
ncompass/models/snn/spike_gpt/: __init__.py  config.py  inference.py  tokenizer.py
ncompass/models/snn/spike_gpt/train/: __init__.py  train.py
